# deploy-controller

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/src/: __init__.py
api/src/application/: __init__.py
api/src/application/ports/: __init__.py  repositories.py
api/src/application/use_cases/: __init__.py  auth.py  authorization.py  credentials.py  deployments.py  events.py  identity.py  registry.py  roles.py  tenancy.py  webhooks.py
api/src/composition/: __init__.py  aws_container.py  container.py  local_seed.py  memory_container.py
api/src/domain/: __init__.py  enums.py  errors.py  models.py  planning.py
api/src/infrastructure/: __init__.py  ids.py  time.py
api/src/infrastructure/dynamodb/: __init__.py  repositories.py
api/src/infrastructure/memory/: __init__.py  repositories.py
api/src/interfaces/: __init__.py
api/src/interfaces/fastapi/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
api/src/interfaces/lambda_api/: __init__.py  handler.py  responses.py  router.py
api/tests/integration/: test_fastapi_routes.py  test_lambda_router.py
api/tests/unit/: test_events.py  test_planning.py  test_use_cases.py  test_webhooks.py
cli/: README.md  go.mod
cli/cmd/onerelease/: main.go
cli/internal/cli/: cli.go  cli_test.go
docs/: core-invariant.md
examples/: deployset.json  release.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: main.tsx  styles.css
frontend/src/hooks/: use-workspace-navigate.ts
frontend/src/lib/: admin-capabilities.test.ts  admin-capabilities.ts  api-client.ts  api-types.ts  app-context.tsx  auth-context.tsx  auth-token.ts  entity-icons.ts  form-utils.ts  format.test.ts  format.ts  oidc-client.ts  user-permissions.test.ts  user-permissions.ts  workspace-routes.ts
frontend/src/routes/: root.test.ts  root.tsx
go/: go.mod
go/internal/audit/: audit.go  event_log.go  store.go
go/internal/deployment/: deployment.go  plan.go  runner.go  (+1 more)
infra/terraform/: api_gateway.tf  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  variables.tf
runner-example/: Dockerfile  README.md  pyproject.toml
runner-example/src/runner_example/: __init__.py  __main__.py  cli.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/onerelease_sdk/: __init__.py  client.py  errors.py  models.py  publisher.py  runner.py
sdk/python/src/settle_sdk/: __init__.py  client.py  errors.py  models.py  publisher.py  runner.py
sdk/python/tests/: test_sdk.py
src/: __init__.py
src/composition/: __init__.py  aws_container.py  container.py  local_seed.py  memory_container.py
src/domain/: __init__.py  enums.py  errors.py  models.py  planning.py
src/infrastructure/: ids.py  time.py
tests/integration/: test_fastapi_routes.py  test_lambda_router.py
tests/unit/: test_planning.py  test_use_cases.py
webui/: Dockerfile  tailwind.config.ts  vite.config.ts
(+147 files in other folders)
