[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deployset-controller"
version = "0.1.0"
description = "Control-plane MVP for DeploySet-based deployment planning."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
