[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runner-example"
version = "0.1.0"
description = "Example custom deployment runners built on the Settle Python SDK."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = []

[project.scripts]
runner-example = "runner_example.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/runner_example"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
