[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "settle-sdk"
version = "0.1.0"
description = "Python SDK for Settle deployment runners and release publishers."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Settle" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/settle_sdk"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
